# tokenarium

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
aqua/: __init__.py  __main__.py  cli.py  config.py  fish.py  interface.py  main.py  orchestrator.py  renderer.py  seed.py  store.py
aqua/limbs/: claude_limb.py  codex_limb.py  gemini_limb.py  git_limb.py  polling_mixin.py
docs/: agent.xlsx  aquarium_stage.xlsx  architecture.md  dialogue.xlsx  fish_species.xlsx
docs/superpowers/specs/: 2026-04-26-codex-limb-feeddata-and-v4a-diff-design.md
tests/: base_limb_test.py  conftest.py  test_claude_limb.py  test_polling_mixin.py  test_real_claude_scan.py  test_seed.py  test_store_init.py
